# open-shop-scheduling-problem

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PROJET-N6.docx  README.md  cmake_install.cmake  data.txt  genetic.txt  heuristic.txt  heuristique  launch.sh  launchErkang.sh  vis.py
src/: exactSolution.c  exactSolution.h  genetic.c  genetic.h  heuristiqueA.c  heuristiqueErkang.c  heuristiqueErkang.h  init.c  init.h  intervalTree.c  intervalTree.h  job.c  job.h  main.c  tool.c  tool.h
